/review - fix z-index of the progress bar

--- a/frontend/pages/courses_id_review/components/ProblemBeingSolved/index.css
+++ b/frontend/pages/courses_id_review/components/ProblemBeingSolved/index.css
@@ -155,6 +155,7 @@
     position: fixed;
     bottom: 0;
     left: 0; right: 0;
+    z-index: 100000;
     // margin: 30px 0;
 
     &.-failed div.inner{
